<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:layout_margin="30dp"
    tools:context=".ItemDetailsActivity">

    <TextView
        android:id="@+id/show_item_text1"
        android:text="@string/show_item_name"
        android:textSize="30sp"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/show_item_name_hint" />

    <TextView
        android:id="@+id/show_item_text2"
        android:text="@string/show_item_expiration_date"
        android:paddingTop="40dp"
        android:textSize="30sp"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/item_expiration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/show_item_expiration_date_hint" />

    <TextView
        android:id="@+id/itemDetailsNoteTitle"
        android:text="@string/show_item_note"
        android:paddingTop="40dp"
        android:textSize="30sp"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/itemDetailsNoteText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/show_item_note_hint" />
    <TextView
        android:id="@+id/itemDetailsPurchasedOnTitle"
        android:text="@string/show_item_purchased_on"
        android:paddingTop="40dp"
        android:textSize="30sp"
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/itemDetailsPurchasedOnText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/show_item_purchased_on_hint" />

</LinearLayout>